# uv-temp

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  dev.Dockerfile  env-2-yml-darwin-arm64  env2yml-darwin-arm64  lefthook.yml  prod.Dockerfile  pyproject.toml  taskfile.docker.yml  taskfile.utils.yml  taskfile.vars.yml  taskfile.yml  test.docx  test.pptx  test.xlsx
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  example.yml
src/: hello.py  main.py
