[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
dev-dependencies = [
    "lefthook>=1.7.22",
    "pyright>=1.1.385",
    "ruff>=0.7.0",
]

[tool.ruff]
src = ["src"]
# extend-exclude = [
#     "migrations"
# ]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q"]
ignore = [
    "B008"
]
extend-select = ["I"]

[tool.pyright]
typeCheckingMode = "strict"
# exclude = [
#     "**/migrations"
# ]